# TimeSlice-AI

./: .gitignore  README.md  development_roadmap.md  file_mapper.md  run.bat  run.ps1  test_adaptive.db  test_calendar.db  test_local.db  test_notifications.db  test_perf.db  timeslice_local.db
.github/workflows/: backend-ci.yml  desktop-ci.yml  release.yml
apps/backend/: main.py  pyproject.toml
apps/backend/app/: __init__.py  auth.py  dependencies.py  logger.py  schemas.py
apps/backend/app/routers/: __init__.py  adaptive.py  analytics.py  auth.py  calendar.py  chat.py  notifications.py  processes.py  scheduler.py  slices.py  sync.py  vault.py
apps/backend/tests/: test_adaptive_api.py  test_api.py  test_auth.py  test_calendar_api.py  test_notifications_api.py  test_performance.py
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/__tests__/: auth-store.test.ts  calendar-store.test.ts  process-store.test.ts
apps/desktop/src/pages/: analytics.tsx  calendar.tsx  dashboard.tsx  kernel.tsx  placeholder.tsx  process-create.tsx  processes.tsx  settings.tsx  vault.tsx
apps/desktop/src/services/: api-client.ts
apps/desktop/src/stores/: adaptive-store.ts  auth-store.ts  (+3 more)
chroma_db/: chroma.sqlite3
deployment/: docker-compose.yml
deployment/docker/: production.Dockerfile
deployment/scripts/: db_backup.py  db_restore.py
docs/design-bible/: PRD.md  Product and Technical Design Bible.docx
(+22 files in other folders)
